force-app/main/default/objects/Payments__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>BillingCountry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>BillingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>BillingStreet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_PostalCode__c</fullName>
        <label>Billing PostalCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_email__c</fullName>
        <label>Billing email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_name__c</fullName>
        <label>Billing name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billwerk_Subscription_Page__c</fullName>
        <formula>IF(ISBLANK(Subscription_id__c), &quot;&quot;, &quot;https://admin.billwerk.plus/#/rp/subscriptions/subscription/&quot; &amp; Subscription_id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This link leads to the Billwerk Platform, where you can view/edit the subscription directly.</inlineHelpText>
        <label>Billwerk Subscription Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_date__c</fullName>
        <label>Cancellation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Payment_On_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Payment On Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_message__c</fullName>
        <label>Error message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_discount_Type__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Period_Payment__c</fullName>
        <formula>IF( Amount__c =  Subscriptions__r.Plan_Amount__c  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Period Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_id__c</fullName>
        <label>Invoice id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_unique_handle__c</fullName>
        <label>Invoice unique handle</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsInsertOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInsertOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Unit__c</fullName>
        <label>Market Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Draft - Bobehandling</fullName>
                </value>
                <value>
                    <fullName>Cancellation mail sent</fullName>
                </value>
                <value>
                    <fullName>Cancellation advisor responsible</fullName>
                </value>
                <value>
                    <fullName>Cancellation management responsible</fullName>
                </value>
                <value>
                    <fullName>Canceled – Refund</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Followup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_s_Market_Unit__c</fullName>
        <formula>TEXT(Owner:User.Market_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Market Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <label>Payment ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_link__c</fullName>
        <label>Payment link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Amount__c</fullName>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Version__c</fullName>
        <label>Plan Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reepay_ID__c</fullName>
        <label>Reepay ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reepay_invoice_link__c</fullName>
        <label>Reepay invoice link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refunded_Date__c</fullName>
        <label>Refunded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Event_ID__c</fullName>
        <label>Related Event ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settle_date__c</fullName>
        <label>Settle date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Dunning</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Plan_Amount__c</fullName>
        <formula>Subscriptions__r.Plan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_id__c</fullName>
        <label>Subscription handle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_link__c</fullName>
        <label>Subscription link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subscription_status__c</fullName>
        <label>Subscription status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription Created</fullName>
                </value>
                <value>
                    <fullName>Subscription Approved</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>No subscription included</fullName>
                </value>
                <value>
                    <fullName>Subscription included</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriptions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriptions</label>
        <referenceTo>Subscriptions__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_error__c</fullName>
        <label>Transaction error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_id__c</fullName>
        <label>Transaction id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_state__c</fullName>
        <label>Transaction state</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onetime</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payments</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Onetime</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Onetime</value>
        </filters>
        <label>All Onetime</label>
    </listViews>
    <listViews>
        <fullName>All_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Subscription</value>
        </filters>
        <label>All Subscription</label>
    </listViews>
    <listViews>
        <fullName>Anders_Playground</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead__c</field>
            <operation>equals</operation>
            <value>Aksel Kolby</value>
        </filters>
        <label>Anders&apos; Playground</label>
    </listViews>
    <listViews>
        <fullName>Bank_Transfers</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_type__c</field>
            <operation>equals</operation>
            <value>manual</value>
        </filters>
        <label>Bank Transfers</label>
    </listViews>
    <listViews>
        <fullName>Denmark</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Denmark</label>
    </listViews>
    <listViews>
        <fullName>Full_Subscription_Payments</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_status__c</field>
            <operation>notEqual</operation>
            <value>Subscription Created,Subscription Approved,Accepted,No subscription included,Subscription included</value>
        </filters>
        <filters>
            <field>Full_Period_Payment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Full Subscription Payments</label>
    </listViews>
    <listViews>
        <fullName>Incorrect_Payments</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Amount__c</field>
            <operation>lessThan</operation>
            <value>DKK 1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Created,Pending,Settled,Cancelled</value>
        </filters>
        <label>Incorrect Payments</label>
    </listViews>
    <listViews>
        <fullName>Membership_Payments</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>2/1/2024 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Settled</value>
        </filters>
        <label>Membership Payments</label>
    </listViews>
    <listViews>
        <fullName>Membership_Payments_12309</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Settle_date__c</field>
            <operation>equals</operation>
            <value>2/1/2024 12:00 AM</value>
        </filters>
        <label>Membership Payments</label>
    </listViews>
    <listViews>
        <fullName>Payments_with_Paid_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subscription_status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Payments with Paid Subscription</label>
    </listViews>
    <listViews>
        <fullName>Payments_without_Order</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Settled</value>
        </filters>
        <label>Payments without Order</label>
    </listViews>
    <listViews>
        <fullName>Refunds</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Refunded</value>
        </filters>
        <filters>
            <field>Refunded_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Refunds</label>
    </listViews>
    <listViews>
        <fullName>Sweden</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Refunded_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Payment_link__c</columns>
        <columns>Subscription_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>SEK</value>
        </filters>
        <label>Sweden</label>
    </listViews>
    <listViews>
        <fullName>Swedish_Approved_Subscriptions</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead__c</columns>
        <columns>Order__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription_status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_s_Market_Unit__c</field>
            <operation>equals</operation>
            <value>FA_SE</value>
        </filters>
        <filters>
            <field>Subscription_status__c</field>
            <operation>equals</operation>
            <value>Subscription Approved,Accepted</value>
        </filters>
        <label>Swedish Approved Subscriptions</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>