force-app/main/default/objects/Payments__c/listViews/All_Onetime.listView-meta.xml
<ListView>
    <fullName>All_Onetime</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Refunded_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payment_link__c</columns>
    <columns>Subscription_link__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Onetime</value>
    </filters>
    <label>All Onetime</label>
</ListView>