force-app/main/default/objects/Payments__c/listViews/All_Subscription.listView-meta.xml
<ListView>
    <fullName>All_Subscription</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </filters>
    <label>All Subscription</label>
</ListView>