force-app/main/default/objects/Payments__c/listViews/Denmark.listView-meta.xml
<ListView>
    <fullName>Denmark</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Refunded_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payment_link__c</columns>
    <columns>Subscription_link__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Denmark</label>
</ListView>