force-app/main/default/objects/Payments__c/listViews/Full_Subscription_Payments.listView-meta.xml
<ListView>
    <fullName>Full_Subscription_Payments</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Refunded_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payment_link__c</columns>
    <columns>Subscription_link__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subscription_status__c</field>
        <operation>notEqual</operation>
        <value>Subscription Created,Subscription Approved,Accepted,No subscription included,Subscription included</value>
    </filters>
    <filters>
        <field>Full_Period_Payment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Full Subscription Payments</label>
</ListView>