force-app/main/default/objects/Payments__c/listViews/Incorrect_Payments.listView-meta.xml
<ListView>
    <fullName>Incorrect_Payments</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Order__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>lessThan</operation>
        <value>DKK 1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Created,Pending,Settled,Cancelled</value>
    </filters>
    <label>Incorrect Payments</label>
</ListView>